llm-d/extproc-dataflow-demo/metadata-test/envoy.yaml
admin:
  address: { socket_address: { address: 127.0.0.1, port_value: 9902 } }

static_resources:
  listeners:
  - name: main
    address: { socket_address: { address: 0.0.0.0, port_value: 10001 } }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
              log_format: { text_format_source: { inline_string: "ACCESS code=%RESPONSE_CODE% details=%RESPONSE_CODE_DETAILS%\n" } }
          route_config:
            name: local
            virtual_hosts:
            - name: all
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: echo }
          http_filters:
          # ipp: BEFORE the EPP. body BUFFERED so it gets a body phase. forwards both namespaces.
          - name: ext_proc.ipp
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
              grpc_service: { envoy_grpc: { cluster_name: ipp } }
              metadata_options:
                forwarding_namespaces:
                  untyped: [ "envoy.lb", "test.pick" ]
              processing_mode:
                request_header_mode: SEND
                response_header_mode: SKIP
                request_body_mode: BUFFERED
                response_body_mode: NONE
          # epp: sets envoy.lb + test.pick dynamic metadata. receiving_namespaces lets Envoy SAVE them.
          - name: ext_proc.epp
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
              grpc_service: { envoy_grpc: { cluster_name: epp } }
              metadata_options:
                receiving_namespaces:
                  untyped: [ "envoy.lb", "test.pick" ]
              processing_mode:
                request_header_mode: SEND
                response_header_mode: SKIP
                request_body_mode: NONE
                response_body_mode: NONE
          # probe: CONTROL. AFTER the EPP, same forwarding as ipp. proves the metadata is set+forwardable.
          - name: ext_proc.probe
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
              grpc_service: { envoy_grpc: { cluster_name: probe } }
              metadata_options:
                forwarding_namespaces:
                  untyped: [ "envoy.lb", "test.pick" ]
              processing_mode:
                request_header_mode: SEND
                response_header_mode: SKIP
                request_body_mode: NONE
                response_body_mode: NONE
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: ipp
    type: STATIC
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config: { http2_protocol_options: {} }
    load_assignment:
      cluster_name: ipp
      endpoints: [{ lb_endpoints: [{ endpoint: { address: { socket_address: { address: 127.0.0.1, port_value: 19001 } } } }] }]
  - name: epp
    type: STATIC
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config: { http2_protocol_options: {} }
    load_assignment:
      cluster_name: epp
      endpoints: [{ lb_endpoints: [{ endpoint: { address: { socket_address: { address: 127.0.0.1, port_value: 19002 } } } }] }]
  - name: probe
    type: STATIC
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config: { http2_protocol_options: {} }
    load_assignment:
      cluster_name: probe
      endpoints: [{ lb_endpoints: [{ endpoint: { address: { socket_address: { address: 127.0.0.1, port_value: 19003 } } } }] }]
  - name: echo
    type: STATIC
    load_assignment:
      cluster_name: echo
      endpoints: [{ lb_endpoints: [{ endpoint: { address: { socket_address: { address: 127.0.0.1, port_value: 18090 } } } }] }]
